appId: com.m1ku.turn
name: Open-source licenses
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: Listen
    timeout: 60000
- waitForAnimationToEnd
- scrollUntilVisible:
    element: Settings
- tapOn: Settings
- scrollUntilVisible:
    element: Your words
    direction: DOWN
    speed: 20
    visibilityPercentage: 50
- extendedWaitUntil:
    visible: Your words
    timeout: 10000
- scrollUntilVisible:
    element: 'Open-source licenses'
- tapOn: 'Open-source licenses'
- scrollUntilVisible:
    element: 'Search packages'
- assertVisible: 'Search packages'
- takeScreenshot: licenses-list
