appId: com.m1ku.turn
name: Privacy notice
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: Listen
    timeout: 60000
- waitForAnimationToEnd
- scrollUntilVisible:
    element: Settings
- tapOn: Settings
- scrollUntilVisible:
    element: Your words
    direction: DOWN
    speed: 20
    visibilityPercentage: 50
- extendedWaitUntil:
    visible: Your words
    timeout: 10000
- scrollUntilVisible:
    element: 'Privacy notice'
- tapOn: 'Privacy notice'
- scrollUntilVisible:
    element: 'Privacy notice'
- assertVisible: 'Privacy notice'
- takeScreenshot: privacy-notice
